[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config_system_battisti456"
version = "0.0.6"
requires-python = ">= 3.12"
authors = [
    {name = "Autumn Battisti", email = "battisti456@gmail.com"}
]
description = "A module for creating a simple implementaion of global variables in a prject that can be overwritten at runtime from config files."
readme = "README.md"
keywords = ['config']
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "typeguard"
]

[project.urls]
Homepage = "https://github.com/battisti456/config_system_battisti456"
